0.04h: Move to servletV5 jakarta 3.1.0
* Minor improvements